syntax = "proto3";

package def.constants;

option java_package = "com.game.gateway.proto";
option java_outer_classname = "ErrorCodeDef";
option java_multiple_files = true;

// 错误码定义
enum ERROR_CODE {
    // 成功
    SUCESS = 0;
    // token 转换错误
    TOKEN_PARSE_ERROR = 1;
    // 匹配接口必须登录才能访问
    MATCHING_API_UNAUTHORIZED = 2;
    // 房间必须登录才能访问
    ROOM_API_UNAUTHORIZED = 3;
    // 第一个参数必须是 room id
    ROOM_API_IMPORT_ROOM_ID = 4;
}